Enjoy toooting! This version includes following improvements and fixes:
- Fix whole word filter matching