@@ -78,7 +78,7 @@
     "react-native-htmlview": "^0.16.0",
     "react-native-image-picker": "^4.10.2",
     "react-native-ios-context-menu": "^1.15.1",
-    "react-native-language-detection": "^0.1.0",
+    "react-native-language-detection": "^0.2.2",
     "react-native-live-text-image-view": "^0.4.0",
     "react-native-pager-view": "^6.1.2",
     "react-native-reanimated": "^2.13.0",
