@@ -8,7 +8,7 @@ import { useTranslation } from 'react-i18next'
 import { TextInput } from 'react-native'
 import { useSelector } from 'react-redux'
 import ComposeContext from '../../utils/createContext'
-import formatText from '../../utils/formatText'
+import { formatText } from '../../utils/processText'
 
 const ComposeSpoilerInput: React.FC = () => {
   const { composeState, composeDispatch } = useContext(ComposeContext)
