@@ -1,2 +1,3 @@
 toooting愉快！此版本包括以下改进和修复：
+- 自动识别发嘟语言
 - 修复过滤整词功能
