@@ -1,2 +1,3 @@
 Enjoy toooting! This version includes following improvements and fixes:
+- Automatic setting detected language when tooting
 - Fix whole word filter matching
